[gd_scene load_steps=13 format=3 uid="uid://ecq06la4raj4"]

[ext_resource type="Script" uid="uid://be35lynj2gglo" path="res://scripts/main_menu.gd" id="1_oa1go"]
[ext_resource type="Texture2D" uid="uid://repc72gg2bq" path="res://assets/images/PONG COLOURS TITLE.png" id="2_flqon"]
[ext_resource type="Texture2D" uid="uid://tr1s1vncd2rc" path="res://assets/images/PLAY.png" id="2_wu84c"]
[ext_resource type="Texture2D" uid="uid://cgx8ygrcdpotv" path="res://assets/images/CHANGE NAME.png" id="3_8ln24"]
[ext_resource type="Texture2D" uid="uid://bn0gkfkfrbuu2" path="res://assets/images/PLAY hover.png" id="4_wu84c"]
[ext_resource type="Texture2D" uid="uid://djo66l4vgs1vs" path="res://assets/images/OPTIONS.png" id="5_tbmy8"]
[ext_resource type="Texture2D" uid="uid://20t8rp360jfu" path="res://assets/images/ACHIEVEMENTS.png" id="6_jk1qb"]
[ext_resource type="Texture2D" uid="uid://d0bcw2no7sewe" path="res://assets/images/CHANGE NAME hover.png" id="6_tbmy8"]
[ext_resource type="Texture2D" uid="uid://bgogee1b7erpf" path="res://assets/images/QUIT.png" id="7_5dd4i"]
[ext_resource type="Texture2D" uid="uid://8yppt5jsg7xk" path="res://assets/images/OPTIONS hover.png" id="8_jk1qb"]
[ext_resource type="Texture2D" uid="uid://oqss01pqpsn0" path="res://assets/images/ACHIEVEMENTS hover.png" id="10_flqon"]
[ext_resource type="Texture2D" uid="uid://bp8h2o6vp04ce" path="res://assets/images/QUIT hover.png" id="12_rcqid"]

[node name="MainMenu" type="Control"]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oa1go")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MenuLayout" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_constants/separation = 30
alignment = 1

[node name="Pong Colours" type="TextureRect" parent="MenuLayout"]
layout_mode = 2
texture = ExtResource("2_flqon")
stretch_mode = 3

[node name="PlayButton" type="TextureButton" parent="MenuLayout"]
layout_mode = 2
texture_normal = ExtResource("2_wu84c")
texture_pressed = ExtResource("4_wu84c")
texture_hover = ExtResource("4_wu84c")
stretch_mode = 3

[node name="ChangeNameButton" type="TextureButton" parent="MenuLayout"]
layout_mode = 2
texture_normal = ExtResource("3_8ln24")
texture_pressed = ExtResource("6_tbmy8")
texture_hover = ExtResource("6_tbmy8")
stretch_mode = 3

[node name="OptionsButton" type="TextureButton" parent="MenuLayout"]
layout_mode = 2
texture_normal = ExtResource("5_tbmy8")
texture_pressed = ExtResource("8_jk1qb")
texture_hover = ExtResource("8_jk1qb")
stretch_mode = 3

[node name="AchievementsButton" type="TextureButton" parent="MenuLayout"]
layout_mode = 2
texture_normal = ExtResource("6_jk1qb")
texture_pressed = ExtResource("10_flqon")
texture_hover = ExtResource("10_flqon")
stretch_mode = 3

[node name="QuitButton" type="TextureButton" parent="MenuLayout"]
layout_mode = 2
texture_normal = ExtResource("7_5dd4i")
texture_pressed = ExtResource("12_rcqid")
texture_hover = ExtResource("12_rcqid")
stretch_mode = 3

[connection signal="pressed" from="MenuLayout/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MenuLayout/ChangeNameButton" to="." method="_on_change_name_button_pressed"]
[connection signal="pressed" from="MenuLayout/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MenuLayout/AchievementsButton" to="." method="_on_achievements_button_pressed"]
[connection signal="pressed" from="MenuLayout/QuitButton" to="." method="_on_quit_button_pressed"]
